@@ -1,5 +1,7 @@
 *SVN*
 
+* Added javascript_include_tag :defaults shortcut that'll include all the default javascripts included with Action Pack (prototype, effects, controls, dragdrop)
+
 * Cache several controller variables that are expensive to calculate #1229 [skaes@web.de]
 
 * The session class backing CGI::Session::ActiveRecordStore may be replaced with any class that duck-types with a subset of Active Record.  See docs for details #1238 [skaes@web.de]
